style(virtual-display): fix spacing card

--- a/src/styles/theme/components/m-virtual-displays/m-virtual-displays.scss
+++ b/src/styles/theme/components/m-virtual-displays/m-virtual-displays.scss
@@ -126,6 +126,7 @@
       position: relative;
       border-radius: 20px;
       border: none;
+      @extend .mr-5;
 
       &__body {
         @extend .p-5;
